# fltk-boilerplate

./: CMakeLists.txt  README.md  local-build.cmd
src/: main.cpp
